--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.7.5"
   },
   "name": "codsoft",
   "description": "Repository for all the task that is given by the codsoft during the internship period .",
