--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon main.js"
+    "start": "node main.js"
   },
   "author": "sobhindra budhathoki",
   "license": "ISC"
