--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
+"scripts": {
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "proxy": "https://it-jobs-two.vercel.app",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.2.0",
