--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "core-js": "^3.37.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -11,6 +12,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.3",
     "path": "^0.12.7",
     "socket.io": "^4.7.5"
